// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Badge renders status not available 1`] = `
<Tooltip
  content={
    <Translate
      html={false}
      t="baggage_modal.tooltip.not_available"
      transform={[Function]}
      values={Object {}}
    />
  }
  preferredPosition="top"
  size="small"
>
  <Badge
    type="dark"
  >
    <Alert
      size="small"
    />
    <Translate
      html={false}
      t="baggage_modal.badge.not_available"
      transform={[Function]}
      values={Object {}}
    />
  </Badge>
</Tooltip>
`;

exports[`#Badge renders status processing 1`] = `
<Tooltip
  content={
    <Translate
      html={false}
      t="baggage_modal.tooltip.processing"
      transform={[Function]}
      values={Object {}}
    />
  }
  preferredPosition="top"
  size="small"
>
  <Badge
    type="info"
  >
    <Reload
      size="small"
    />
    <Translate
      html={false}
      t="baggage_modal.badge.processing"
      transform={[Function]}
      values={Object {}}
    />
  </Badge>
</Tooltip>
`;

exports[`#Badge renders status unpaid 1`] = `
<Tooltip
  content={
    <Translate
      html={false}
      t="baggage_modal.tooltip.unpaid"
      transform={[Function]}
      values={Object {}}
    />
  }
  preferredPosition="top"
  size="small"
>
  <Badge
    type="warning"
  >
    <Money
      size="small"
    />
    <ContextConsumer>
      <Component />
    </ContextConsumer>
  </Badge>
</Tooltip>
`;
